ExportMenu: fix crash when exporting to KDE Connect in rectangle mode

BUG: 516717
FIXED-IN: 6.6.2